# CADMorph

./: .gitignore  README.md
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: pyproject.toml
backend/models/: gat_classifier.pt  meta.json  siamese_encoder.pt
backend/src/cadmorph/: __init__.py  config.py  determinism.py  models.py  observability.py  pipeline.py
backend/src/cadmorph/api/: __init__.py  app.py  routes.py
backend/src/cadmorph/classify/: data.py  features.py  model.py  stage.py  train.py
backend/src/cadmorph/deltas/: __init__.py  compute.py  models.py
backend/src/cadmorph/extraction/: __init__.py  pdf_provider.py  provider.py  validation.py
backend/src/cadmorph/graph/: __init__.py  build.py
backend/src/cadmorph/match/: cascade.py  model.py  train.py
backend/src/cadmorph/register/: anchors.py  ransac.py
backend/src/cadmorph/report/: document.py  markup.py  overlay_render.py  render.py  severity.py
backend/src/cadmorph/summarize/: render.py
backend/src/cadmorph/summarize/templates/: default_added.j2  default_modified.j2  default_removed.j2  dimension_added.j2  dimension_modified.j2  dimension_removed.j2  text_modified.j2
backend/tests/: conftest.py
backend/tests/determinism/: test_repeat_runs.py
backend/tests/groundtruth/: scoring.py  test_alignment.py  test_classify.py  test_e2e_pair01.py  test_extraction.py  test_matching.py
backend/tests/integration/: test_error_envelope.py  test_input_rejection.py  test_job_log.py  test_markup_traceability.py  test_perf.py  test_report_pdf.py  test_self_contained.py
backend/tests/unit/: test_delta_schema.py  test_provider_seam.py  test_severity.py  test_summarizer_grounding.py  test_synthgen_guard.py  test_ttl_cleanup.py
frontend/: .eslintrc.cjs  AGENTS.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChangeList.tsx  ErrorState.tsx  (+4 more)
specs/001-pdf-change-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tools/synthgen/: README.md  pyproject.toml
tools/synthgen/synthgen/: __init__.py  __main__.py  pairs.py  sheets.py
(+6 files in other folders)
