[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synthgen"
version = "0.1.0"
description = "Synthetic ground-truth drawing pair generator for CADMorph (Constitution V)"
requires-python = ">=3.11"
dependencies = ["PyMuPDF>=1.24,<2"]

[tool.setuptools.packages.find]
include = ["synthgen*"]
